# plexus-macros

./: Cargo.toml  DX_INSPIRATION.md  MACRO_ANALYSIS.md  PIPELINE_OVERVIEW.md  README.md  TARGET_DX.md  TYPE_EXTRACTION.md
.hyperforge/: config.toml
docs/: session-stream-implementation.md
docs/architecture/: 16671157983707995647_authentication-codegen.md  16680006406217676543_schema-intrinsic-hashing.md
examples/schema_const/: Cargo.toml
examples/schema_const/src/: main.rs
examples/schema_query/: Cargo.toml
examples/schema_query/src/: main.rs
examples/session_to_stream/: Cargo.toml
examples/session_to_stream/src/: main.rs
plans/AUTH/: AUTH-1.md  AUTH-2.md  AUTH-3.md  AUTH-4.md
src/: handle_enum.rs  lib.rs  parse.rs  request.rs  stream_event.rs
src/codegen/: activation.rs  method_enum.rs  mod.rs
tests/: activation_param_tests.rs  activation_schema_tests.rs  child_capabilities_tests.rs  child_compile_tests.rs  child_hub_inference_tests.rs  child_routing_tests.rs  description_defaults_tests.rs  handle_enum_tests.rs  hf_audit_4_child_schema_drill_down_tests.rs  hub_method_tests.rs  ir10_static_child_method_schema_tests.rs  ir3_compile_tests.rs  ir3_role_and_deprecation_tests.rs  ir5_compile_tests.rs  ir5_deprecation_extension_tests.rs
tests/compile/: activation_crate_path_auto_resolves.rs  activation_explicit_crate_path_override.rs  activation_no_request_unchanged.rs  activation_param_field_injection.rs  activation_param_field_name_mismatch.rs  activation_param_field_name_mismatch.stderr  activation_param_type_mismatch.rs  activation_param_type_mismatch.stderr  activation_request_field_type_mismatch.rs  activation_request_field_type_mismatch.stderr  activation_request_public_override.rs  activation_request_type.rs  child_and_hub_flag_ambiguous.rs  child_and_hub_flag_ambiguous.stderr  child_and_legacy_children_list.rs  child_and_legacy_children_list.stderr  child_and_method_mutually_exclusive.rs  child_and_method_mutually_exclusive.stderr  child_invalid_signature.rs  child_invalid_signature.stderr  child_list_not_found.rs  child_list_not_found.stderr  child_list_wrong_signature.rs  child_list_wrong_signature.stderr  child_search_not_found.rs  child_search_not_found.stderr  child_search_wrong_signature.rs  child_search_wrong_signature.stderr  child_static_and_dynamic_ok.rs  child_two_dynamic_methods.rs  child_two_dynamic_methods.stderr  from_auth_still_works.rs  ir20_generic_activation_with_child.rs  ir3_activation_deprecated_compiles.rs  ir3_removed_in_without_deprecated.rs  ir3_removed_in_without_deprecated.stderr  ir5_children_arg_compiles.rs  ir5_hub_flag_compiles.rs  mixed_activation_param_and_from_auth.rs
