[package]
name = "plexus-macros"
version = "0.2.1-worktree"
edition = "2021"
license = "MIT"
description = "Procedural macros for Plexus RPC activations"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
uuid = { version = "1.0", features = ["v5"] }

[dev-dependencies]
substrate = { path = "..", package = "substrate-hub" }
plexus-core = { path = "../hub-core" }
dialectic = { version = "0.4.1", features = ["tokio"] }
schemars = { version = "1.0.4", features = ["derive", "uuid1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
trybuild = "1.0"
uuid = { version = "1.0", features = ["v4"] }

