[package]
name = "plexus-macros"
version = "0.3.6"
edition = "2021"
license = "MIT"
description = "Procedural macros for Plexus RPC activations"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
uuid = { version = "1.0", features = ["v5"] }

[dev-dependencies]
plexus-macros = { path = "." }
substrate = { path = "../plexus-substrate" }
plexus-core = { path = "../plexus-core" }
dialectic = { version = "0.4.1", features = ["tokio"] }
schemars = { version = "1.0.4", features = ["derive", "uuid1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
trybuild = "1.0"
uuid = { version = "1.0", features = ["v4"] }

