[package]
name = "plexus-macros"
version = "0.5.2"
edition = "2021"
license = "MIT"
description = "Procedural macros for Plexus RPC activations"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
proc-macro-crate = "3"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
uuid = { version = "1.0", features = ["v5"] }

[features]
# Enables the no-op JsonSchema proc_macro_derive, used by plexus-schemars-compat
# to intercept #[derive(schemars::JsonSchema)] in test code.
schemars-compat = []

[dev-dependencies]
plexus-macros = { path = "." }
plexus-core = { path = "../plexus-core" }
dialectic = { version = "0.4.1", features = ["tokio"] }
schemars = { version = "1.1", features = ["derive", "uuid1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
trybuild = "1.0"
uuid = { version = "1.0", features = ["v4"] }
# Runtime dependencies needed by `#[plexus_macros::activation]`-generated code in compile tests
jsonrpsee = { version = "0.26", features = ["server", "macros"] }
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-stream = "0.3"


