[package]
name = "session-to-stream"
version = "0.1.0"
edition = "2021"
description = "Example showing how session types map to wire-format streams"

[dependencies]
# Session types for protocol definition
dialectic = { version = "0.4.1", features = ["tokio"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime and streams
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-stream = "0.3"

# Schema generation
schemars = { version = "1.0.4", features = ["derive"] }
